# NeuralNetwork

./: README.md
wk6/auto_encoders/: config.yaml  main.py  mkdocs.yml  pyproject.toml
wk6/auto_encoders/docs/notebooks/: 01_mnist_ae_training.ipynb  04_resnet50_ae_eval.ipynb  06_resnet50_masked_eval.ipynb  08_variational_evaluation.ipynb  09_variational_other_images_eval.ipynb  10_vqvae_evaluation.ipynb
wk6/auto_encoders/scripts/: mnist_contractive_auto_encoder_main.py  resnet50_denoising_auto_encoder_main.py  resnet50_variational_auto_encoder_main.py  resnet50_vqvae_auto_encoder_main.py
wk7/gans/: .env.example  config.yaml  mkdocs.yml  pyproject.toml
wk7/gans/docs/: index.md
wk7/gans/docs/notebooks/: mnist-conditional-gan-eval.ipynb  mnist-control-gan-eval.ipynb  mnist-gan-eval.ipynb  trees-conditional-gan-eval.ipynb  trees-control-gan-eval.ipynb  trees-gan-eval.ipynb
wk7/gans/docs/project-guide/: project-guide.md
wk7/gans/src/gans.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wk7/gans/src/svlearn_gan/: __init__.py  classifier.py  conditional_dcgan.py  control_gan.py  dcgan_datasets.py  dcgan_models.py  gan_trainer.py
wk8/cnn_classification/: config.yaml  main.py  mkdocs.yml  pyproject.toml
wk8/cnn_classification/docs/: index.md
wk8/cnn_classification/docs/notebooks/: CNN_trees_classification.ipynb
wk8/cnn_classification/docs/project-guide/: project-guide.md
wk8/cnn_classification/scripts/: tree_classification_cnn.py  tree_classification_vgg.py
wk8/cnn_classification/src/cnn_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
(+86 files in other folders)
